--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <section>
             <h2>SUMMARY</h2>
-            <p>Driven Software Development Intern seeking a full-time position to leverage acquired skills in core Java, SQL, HTML, CSS, and JavaScript/React. Demonstrated ability to learn, adapt, and thrive in fast-paced environments.</p>
+            <p>Driven Software Development Intern seeking a full-time position to leverage acquired skills in core Java, SQL, HTML, CSS, JavaScript and React. Demonstrated ability to learn, adapt, and thrive in fast-paced environments.</p>
         </section>
 
         <section>
@@ -108,7 +108,7 @@
             <ul>
                 <li>Built a responsive news application using React, Bootstrap, and the News API to deliver categorized news articles.</li>
                 <li>Implemented dynamic routing for efficient state management and component reuse.</li>
-                <li>Integrated animated features like...</li>
+                <li>Integrated animated features</li>
             </ul>
         </section>
 
@@ -116,7 +116,7 @@
             <h2>ADDITIONAL INFORMATION</h2>
             <ul>
                 <li><strong>Frontend Development:</strong> HTML, CSS, JavaScript, React.js</li>
-                <li><strong>Backend Development:</strong> Node.js and MongoDB Basics</li>
+                <li><strong>Backend Development:</strong> Core Java ,SQL </li>
                 <li><strong>UI Libraries:</strong> Material UI, Tailwind, Bootstrap</li>
                 <li><strong>Package Managers:</strong> npm, Yarn</li>
                 <li><strong>Version Control:</strong> GitHub, Git</li>
